--- a/source code/GH uploaded donor report.Rmd
+++ b/source code/GH uploaded donor report.Rmd
@@ -141,7 +141,7 @@ All this data is encouraging, but stories from the beneficiaries themselves make
 
 *Of all the students of Charity's, each one now has a backyard garden to source their own vegetables, sells the surplus of their crops, and has invested in livestock. One student sticks out in particular though—Charity's mother, Grace. Since learning the new techniques from SAFI, Grace has doubled her income and expanded her livestock investments. She no longer struggles to find food, and can support all her children and their basic needs. With all this prosperity, Grace's household has become a happier, more stable environment. "Without money, we quarreled. Now, we work together and are happy," she says. In the future, Grace hopes to one day buy a car to get around, now that her age is affecting her joints. "Thank you SAFI for what you have done in my family and my community. Other communities need to benefit like we have. I'm so grateful for what SAFI does!" We share the same sentiment. The family and community impact of SAFI's simple programs has effects that ripple across generations, changing families, communities, and the beautiful country of Malawi.*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Chakhaza%20and%20Simlemba-19.jpg" alt="Photo of Charity Gausi's family or farm" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Chakhaza%20and%20Simlemba-19.jpg" alt="Photo of Charity Gausi's family or farm" height="600" loading="lazy">
 
 </details>
 
@@ -151,7 +151,7 @@ All this data is encouraging, but stories from the beneficiaries themselves make
 *In 2023, SAFI visited the village of Chukozo, looking to find participants for their one-week self-reliance program. After speaking with the village chief, Johannes Phiri was chosen to fill the role. He would go to SAFI campus for one week to learn modernized farming techniques, business management, agroforestry, and fruit cultivation skills that he could then bring back to his village and teach others to implement. Currently, he leads 42 other farmers in the village, teaching them the about the skills SAFI has given him to increase his harvest and make his farm sustainable. "We were only getting maybe half a bag of soybeans, for example, but now we are able to get seven, eight bags of soybeans. The maize, we used to harvest 2-3 bags before, but now we're able to get 60 bags." Johannes says. With this increase, Johannes and his wife have multiplied their income, making MWK 1.5 million from selling the surplus from last year's harvest. Visiting the farm, you can see the impact that this program has had. With the extra money, the family has invested in more livestock, rebuilt their house, bought more land—they no longer go hungry at any point in the year. Every square inch of their property is covered with trees, flowers, or crops. Johannes mentioned that one of his sons has taken up the new farming techniques, now selling a surplus and producing enough to feed his family reliably.*
 *As for the community, Johannes says that much has changed. Because of the food insecurity, theft of crops was very common. Now that Johannes has helped so many farmers to start backyard gardens, there is no longer any need to steal. The village is a safer, better nourished community. Many fellow farmers have followed in Johannes' footsteps, making great strides in their economic progress. In the future, Johannes and Gloria hope to build a better house, start a commercial farm, and raise more livestock.*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Johannes%20and%20Gloria-1.jpg" alt="Photo of Johannes and Gloria Phiri" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Johannes%20and%20Gloria-1.jpg" alt="Photo of Johannes and Gloria Phiri" height="600" loading="lazy">
 </details>
 
 ## Educate the Children
@@ -223,7 +223,7 @@ The following students exemplify perfectly the impact of SAFI's Educate the Chil
 *Without the SAFI's support of one student, Thomas, hundreds of children in Malawi would have been denied the opportunity to succeed and make a difference. "The knowledge I have gained from school, I can communicate to those in need. Without SAFI, I wouldn't have the training necessary to bring growth to the needy. We have to continue helping needy students. I myself have benefitted, and many have benefitted because of me. If SAFI didn't support me, these kids wouldn't have had a chance."*
 *Continued support to the Educate the Children program doesn't just help individuals—families and communities grow and progress, leading the nation to prosperity through the simple act of paying school fees.*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Malawi%20Medical%20College-3.jpg" alt="Photo of Thomas Mwale" style="display: block; margin-left: auto; margin-right: auto;" height="500" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/Malawi%20Medical%20College-3.jpg" alt="Photo of Thomas Mwale" height="500" loading="lazy">
 </details>
 
 <details>
@@ -232,7 +232,7 @@ The following students exemplify perfectly the impact of SAFI's Educate the Chil
 
 *Up until now, Massa has been unable to pay the MK400,000 ($228 USD) per semester tuition to start his education. For the past eight years, Massa has tried and failed to come up with the money. Massa still faces challenges, walking everyday for two hours to reach campus. He still lacks basic needs, often coming to school without enough food. These things make it difficult, but his determination to his dream wouldn't let him quit. He has overcome many challenges up to this point and refuses to give up. Now, SAFI pays his tuition and supplies him with a small stipend to continue studying. Massa is grateful to SAFI for allowing him the opportunity to pursue his dreams of serving the poor and needy.*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/CollegeofHealthScience-3.jpg" alt="Photo of Massa Chunga" style="display: block; margin-left: auto; margin-right: auto;" height="500" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/CollegeofHealthScience-3.jpg" alt="Photo of Massa Chunga" height="500" loading="lazy">
 </details>
 
 ## Wells of Hope
@@ -289,9 +289,9 @@ But the impact goes far beyond water. As shown in the following table, beneficia
 
 *The peace of mind afforded to hundreds of people in Yohane is priceless. The benefits of the borehole extend much beyond just water—the village is alive, and will continue to prosper. "We only thank SAFI for drilling the borehole, because now we are so safe. We drink clean water as I said, we construct backyard gardens and find food easily. We just thank SAFI for drilling the borehole, all of our problems have been solved!"*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/MnchinjiBorehole-4.jpg" alt="Mchinji borehole 1" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/MnchinjiBorehole-4.jpg" alt="Mchinji borehole 1" height="600" loading="lazy">
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/MnchinjiBorehole-14.jpg" alt="Mchinji borehole 2" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/MnchinjiBorehole-14.jpg" alt="Mchinji borehole 2" height="600" loading="lazy">
 
 
   </details>
@@ -304,9 +304,9 @@ But the impact goes far beyond water. As shown in the following table, beneficia
 
 *Filimoni says, "I commend SAFI for what they have done in our community. It has given us agricultural knowledge, sanitation, it has also given us the borehole which has changed a lot of things in the community. I ask that SAFI do this for more communities in this country."*
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/DSCF2032.jpg" alt="Sunduza borehole 1" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/DSCF2032.jpg" alt="Sunduza borehole 1" height="600" loading="lazy">
 
-<img src="https://pjh2112.github.io/SAFI-donor-resources/media/DSCF2077.JPG" alt="Sunduza borehole 2" style="display: block; margin-left: auto; margin-right: auto;" height="600" loading="lazy">
+<img src="https://pjh2112.github.io/SAFI-donor-resources/media/DSCF2077.JPG" alt="Sunduza borehole 2" height="600" loading="lazy">
 
 </details>
 
